# mcp_supabase_self-hosted

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_GUIDE.md  DEPLOY_TO_GITHUB.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  docker-daemon.yml  install.sh  install_final.sh  install_production.sh  install_robust.sh  install_simple.sh  install_smart.sh  install_ubuntu20.sh  pyproject.toml  test_mcp_connection.py
.kiro/specs/supabase-mcp-server/: design.md  requirements.md  tasks.md
configs/: KIRO_IDE_SETUP.md  claude-desktop.json  generic-http.json  kiro-ide-config.json  kiro-mcp-simple.json  kiro-mcp.json  mcp_client.py  mcp_curl_client.py  mcp_windows_client.py  openai-gpt.json
scripts/: deploy.sh  diagnose.sh  install.sh  setup-supabase-integration.sh  update.sh
scripts/daemon/: README.md  setup_daemon.sh  start_daemon.bat  start_daemon.sh
src/supabase_mcp_server/: __init__.py  __main__.py  config.py  main.py
src/supabase_mcp_server/core/: __init__.py  logging.py
src/supabase_mcp_server/mcp/: __init__.py  handler.py  models.py  registry.py  server.py
src/supabase_mcp_server/middleware/: __init__.py  auth.py  rate_limit.py
src/supabase_mcp_server/services/: __init__.py  database.py  health.py  metrics.py  query_validator.py  schema.py  storage.py  supabase_api.py  supabase_handler.py
systemd/: mcp-supabase.service
tests/: __init__.py  conftest.py  test_auth_middleware.py  test_database_service.py  test_health_service.py  test_main.py  test_mcp_handler.py  test_mcp_models.py  test_mcp_server.py  test_metrics_service.py  test_query_validator.py  test_rate_limit_middleware.py  test_schema_service.py  test_storage_service.py  test_supabase_api_service.py  test_supabase_handler.py
